--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
 	"description": "Service test cases for public REST API.",
 	"author": "Chris Saylor <cjsaylor@gmail.com>",
 	"dependencies": {
-		"frisby": ">= 0.4.6",
+		"frisby": "0.6.x",
 		"underscore": "1.3.x"
 	},
-	"main": "jasmine-node --verbose ./spec/",
 	"engines": {
 		"node": ">= 0.6.11"
 	},
